<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".GiaoDien.MainDetailCT">



    <TextView
        style="@style/Title"
        android:text="@string/titlechitietct" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mact" />

        <EditText
            android:id="@+id/txtMaCT"
            style="@style/TextView"
            android:hint="@string/mact" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenct" />

        <EditText
            android:id="@+id/txtTenCT"
            style="@style/TextView"
            android:hint="@string/tenct" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diachict" />

        <EditText
            android:id="@+id/txtDiaChiCT"
            style="@style/TextView"
            android:hint="@string/diachict" />
    </LinearLayout>


    <Button
        android:id="@+id/btnUpdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnshowall"
        android:text="@string/updata" />

</LinearLayout>